# flask-catalog-backend

./: .env.example  .gitignore  Makefile  Pipfile  README.md  main.py  pyproject.toml  swagger.yaml
api/: __init__.py  catalog.py  common.py  data.py  routes.py
tests/: test_get_prize.py
